Intellisense improvements to generated code.